# google-ads-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/plans/: google-ads-mcp.md
.github/workflows/: test.yml
docs/: api-access-application-design.md
scripts/: get_refresh_token.py
src/google_ads_mcp/: __init__.py  config.py  errors.py  gaql.py  mutate.py  retry.py  server.py  testing.py
src/google_ads_mcp/tools/: __init__.py  accounts.py  adgroups.py  campaigns.py  changes.py  creates.py  keywords.py  metadata.py  planning.py  query.py  writes_status.py  writes_value.py
tests/: test_adgroups.py  test_campaigns.py  test_changes.py  test_creates.py  test_input_validation.py  test_keywords.py  test_metadata.py  test_mutate.py  test_planning.py  test_smoke.py  test_writes_status.py  test_writes_value.py
