[project]
name = "google-ads-mcp"
version = "0.1.0"
description = "MCP server wrapping the Google Ads API (read-only v1, gated writes later)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lucas Santana" }]
keywords = ["mcp", "google-ads", "model-context-protocol", "llm"]
dependencies = [
    "google-ads>=31.1.0",
    "fastmcp>=3.4.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
google-ads-mcp = "google_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ads_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
